--- a/css/media.css
+++ b/css/media.css
@@ -1,82 +1,3 @@
-@media (min-width: 768px) {
-    .container, .container-md, .container-sm {
-        max-width: 1360px;
-    }
-    .frame41{
-      max-width: 100% !important;
-    }
-
-    .imgDiv {
-  height: 544px;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: cover;   /* fill without distortion */
-  z-index: -1;         /* push image behind */
-  overflow: hidden;
-}
-
-.imgDiv img{
-  width: 100%;
-  height: auto;
-}
-
-}
-
-@media (min-width: 200px) and (max-width: 1024px) {
-  .frame3 {
-    font-size: 10px !important;
-  }
-  .frame11 {
-    font-size: 10px !important;
-  }
-  .frame9,
-  .frame8,
-  .frame7,
-  .frame10 {
-    gap: 14px !important;
-  }
-}
-
-@media (max-width: 768px) {
-  #exp {
-    font-size: 9px !important;
-  }
-  .appointment-btn{
-    height: 50px ;
-    margin-top: 5% !important;
-  }
-}
-
-
-
-
-
-@media (min-width: 200px) and (max-width: 768px) {
-  .frame18 {
-    justify-content: space-between !important;
-  }
-  .banner-content{
-    gap: 6px !important;
-  }
-  
-
-  .navbar-nav {
-    align-items: end;
-    margin-right: 0px !important;
-    justify-content: right;
-  }
-  .navbar-collapse {
-    display: flex;
-    flex-direction: row-reverse !important;
-    align-items: flex-start;
-    justify-content: space-between;
-
-    margin-top: 36px !important;
-  }
-}
-
 @media (max-width: 1445px) {
   .nav-link {
     font-size: 8px !important;
@@ -104,6 +25,275 @@
   }
 }
 
+@media (min-width: 1041px) {
+  .navbar-expand-custom .navbar-collapse {
+    display: flex !important;
+  }
+  .navbar-expand-custom .navbar-toggler {
+    display: none !important;
+  }
+}
+
+@media (max-width: 1040px) {
+  .navbar-expand-custom .navbar-collapse {
+    display: none !important;
+  }
+  .navbar-expand-custom .navbar-toggler {
+    display: block !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  .frame3,
+  .frame11 {
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+  }
+
+  #trusted {
+    font-size: 9px !important;
+    line-height: 14px !important;
+  }
+
+  .our-services h1 {
+    font-size: 34px !important;
+  }
+
+  .col-lg-4 p {
+    font-size: 16px;
+  }
+  .doctorimg {
+    height: 100px !important;
+    width: 100px !important;
+  }
+  .doccard {
+    margin-top: 30px;
+  }
+
+  .frame21 {
+    width: 384px !important;
+  }
+  .frame23 img{
+  width: 474px !important;
+}
+ 
+}
+
+
+@media (max-width: 991.98px) {
+  /* lg breakpoint */
+  .frame26 .custom-row {
+    flex-direction: column;
+  }
+}
+
+
+
+@media (min-width: 200px) and (max-width: 1024px) {
+  .frame3 {
+    font-size: 10px !important;
+  }
+  .frame11 {
+    font-size: 10px !important;
+  }
+  .frame9,
+  .frame8,
+  .frame7,
+  .frame10 {
+    gap: 14px !important;
+  }
+}
+
+
+
+@media (min-width: 200px) and (max-width: 768px) {
+  .frame18 {
+    justify-content: space-between !important;
+  }
+  .banner-content {
+    gap: 6px !important;
+  }
+
+  .navbar-nav {
+    align-items: end;
+    margin-right: 0px !important;
+    justify-content: right;
+  }
+  .navbar-collapse {
+    display: flex;
+    flex-direction: row-reverse !important;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    width: 100vw !important;
+
+    margin-top: 14px !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .container,
+  .container-md,
+  .container-sm {
+    max-width: 1360px;
+  }
+  .frame41 {
+    max-width: 100% !important;
+  }
+
+  .imgDiv {
+    height: 544px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover; /* fill without distortion */
+    z-index: -1; /* push image behind */
+    overflow: hidden;
+  }
+
+  .imgDiv img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+
+
+@media (max-width: 768px) {
+  #exp {
+    font-size: 9px !important;
+  }
+  .appointment-btn {
+    height: 50px;
+    margin-top: 5% !important;
+  }
+  .accordion-button {
+    width: 500px !important;
+  }
+  .accordion-body {
+    width: 500px !important;
+  }
+
+  .links{
+    align-items: center !important;
+  }
+  .frame26 button,.frame26 span{
+    align-self: center;
+  }
+}
+
+@media (max-width: 661px) {
+  .frame8 {
+    display: none !important;
+  }
+  .border {
+    width: 26px !important;
+    height: 26px !important;
+  }
+}
+
+
+
+@media (max-width: 480px) {
+  #trusted + h1 {
+    font-size: 20px !important;
+  }
+  #trusted {
+    font-size: 6px !important;
+    line-height: 2px !important;
+  }
+  .blueButton span{
+    font-size: 8px !important;
+  }
+  #exp {
+    font-size: 6px !important;
+  }
+  .banner-btns {
+    gap: 7px !important;
+  }
+  .blueButton {
+    white-space: normal !important; /* allow text to wrap */
+    border-radius: 20px !important;
+  }
+
+  .blueButton + button {
+    padding: 1px 4px !important;
+    white-space: normal !important; /* allow text to wrap */
+    border-radius: 20px !important;
+  }
+  .our-services {
+    align-items: center;
+  }
+
+  
+
+  .blueButton + button span {
+    padding: 12px 14px !important; /* reduce height */
+    font-size: 8px !important; /* slightly smaller text */
+    white-space: normal !important; /* allow text to wrap */
+    border-radius: 20px !important;
+  }
+
+  .frame29 {
+    --bs-gutter-x: 0rem !important;
+  }
+
+  .row {
+    --bs-gutter-x: 0rem !important;
+  }
+  .frame3,
+  .frame11 {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+  }
+  .blueButton{
+    padding: 9px 34px !important;
+  }
+
+  .frame23 img{
+  width: 297px !important;
+}
+
+  .accordion-button {
+    width: auto !important;
+  }
+  .accordion-body {
+    width: auto !important;
+  }
+  .frame21 {
+    width: 244px !important;
+  }
+  .mb-md-0{
+    margin-top: 16px;
+  }
+  #socials{
+    margin-top: 16px ;
+  }
+  .doctors-slider {
+    padding: 50px 0px !important;
+  }
+
+  #our-services-btn{
+    margin-bottom: 20px ;
+  }
+  
+}
+
+
+
+@media (max-width: 376px) {
+  .frame9,
+  .frame8,
+  .frame7,
+  .frame10 {
+    gap: 8px !important;
+  }
+      .frame3 {
+        font-size: 7px !important;
+    }
+}
+
 @media (max-width: 321px) {
   .container,
   .container-fluid,
@@ -129,134 +319,5 @@
   }
   .frame11 {
     height: 67px !important;
-  }
-}
-
-@media (max-width: 1024px) {
-  .frame3,
-  .frame11 {
-    padding-left: 30px !important;
-    padding-right: 30px !important;
-  }
-
-  #trusted {
-    font-size: 9px !important;
-    line-height: 14px !important;
-  }
-
-  .our-services h1{
-    font-size: 34px !important;
-  }
-
-  .col-lg-4 p{
-    font-size:16px;
-  }
-}
-
-@media (max-width: 426px) {
-  .frame3,
-  .frame11 {
-    padding-left: 10px !important;
-    padding-right: 10px !important;
-  }
-
-  
-}
-
-@media (max-width: 376px) {
-  .frame9,
-  .frame8,
-  .frame7,
-  .frame10 {
-    gap: 8px !important;
-  }
-}
-
-@media (max-width: 661px) {
-  .frame8 {
-    display: none !important;
-  }
-  .border {
-    width: 26px !important;
-    height: 26px !important;
-  }
-}
-
-@media (max-width: 1040px) {
-  .navbar-expand-custom .navbar-collapse {
-    display: none !important;
-  }
-  .navbar-expand-custom .navbar-toggler {
-    display: block !important;
-  }
-}
-@media (min-width: 1041px) {
-  .navbar-expand-custom .navbar-collapse {
-    display: flex !important;
-  }
-  .navbar-expand-custom .navbar-toggler {
-    display: none !important;
-  }
-}
-
-
-@media (max-width: 426px) {
-  #trusted + h1{
- font-size: 20px !important;    
-  }
-  #trusted{
-            font-size: 6px !important;
-        line-height: 2px !important;
-
-  }
-      #exp {
-        font-size: 6px !important;
-    }
-    .banner-btns{
-      gap: 7px !important;
-    }
-    .blueButton{
-       padding: 1px 4px !important;   /* reduce height */
-    font-size: 5px !important;      /* slightly smaller text */
-    white-space: normal !important;  /* allow text to wrap */
-    border-radius: 20px !important;  
-    }
-
-    .blueButton + button{
-       padding: 1px 4px !important;  
-    white-space: normal !important;  /* allow text to wrap */
-    border-radius: 20px !important;  
-    }
-    .our-services{
-      align-items: center;
-    }
-
-    .blueButton span {  /* reduce height */
-    font-size: 5px !important; 
-    }
-
-     .blueButton + button span{
-       padding: 12px 14px !important;   /* reduce height */
-    font-size: 5px !important;      /* slightly smaller text */
-    white-space: normal !important;  /* allow text to wrap */
-    border-radius: 20px !important;  
-    }
-
-    .frame29{
-      --bs-gutter-x: 0rem !important;
-    }
-
-    .row{
-      --bs-gutter-x: 0rem !important;
-
-    }
-
-   
-  
-}
-
-@media (max-width: 991.98px) { /* lg breakpoint */
-  .frame26 .custom-row {
-    flex-direction: column;
   }
 }
